# attention_sinks

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
attention_sinks/: __init__.py  attention_sink_kv_cache.py  inject_mixin.py
attention_sinks/generation/: utils.py
attention_sinks/models/: __init__.py
attention_sinks/models/auto/: __init__.py  modeling_auto.py
attention_sinks/models/falcon/: __init__.py  modeling_falcon.py  pos_shift.py
attention_sinks/models/gpt_neox/: __init__.py  modeling_gpt_neox.py  pos_shift.py
attention_sinks/models/gptj/: __init__.py  modeling_gptj.py  pos_shift.py
attention_sinks/models/llama/: __init__.py  modeling_llama.py  pos_shift.py
attention_sinks/models/mistral/: __init__.py  modeling_mistral.py  pos_shift.py
benchmark/: perplexity.py  plot_perplexity.py
benchmark/outputs_btlm_3b_8k_base_2k_win/: attention_sinks.csv  transformers.csv  windowed.csv
benchmark/outputs_falcon_7b/: attention_sinks.csv  transformers.csv  windowed.csv
benchmark/outputs_gptj_6b/: attention_sinks.csv  transformers.csv  windowed.csv
benchmark/outputs_llama_2_7b/: attention_sinks.csv  transformers.csv  windowed.csv
benchmark/outputs_mistral_7b/: attention_sinks.csv  transformers.csv  windowed.csv
benchmark/outputs_mpt_7b/: attention_sinks.csv  transformers.csv  windowed.csv
benchmark/outputs_pythia_6.9b/: attention_sinks.csv  transformers.csv  windowed.csv
benchmark/outputs_qwen_14b/: attention_sinks.csv  transformers.csv
benchmark/outputs_qwen_7b/: attention_sinks.csv  transformers.csv  windowed.csv
benchmark/outputs_stablelm_3b_4e1t/: attention_sinks.csv  transformers.csv  windowed.csv
benchmark/outputs_yi_6b/: attention_sinks.csv  transformers.csv  windowed.csv
benchmark/scripts/: benchmark_btlm.sh  benchmark_falcon.sh  benchmark_gptj.sh  benchmark_llama.sh  benchmark_mistral.sh  benchmark_mpt.sh  benchmark_pythia.sh  benchmark_qwen.sh  benchmark_stablelm_epoch.sh  benchmark_yi.sh
demo/: endless_generation.py  streaming.py  utils.py
scripts/: eval_long_ppl.py  plot_perplexity.py
(+26 files in other folders)
